--- a/Tutorial9/Tutorial9/appsettings.json
+++ b/Tutorial9/Tutorial9/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Jakis connection string"
+    "DefaultConnection" : "Server=localhost,1433;Database=master;User Id=sa;Password=yourStrong(!)Password;TrustServerCertificate=True"
   }
 }
